Fixed jumping title in the list view

--- a/themes/merlinscholz.name-theme/assets/css/style.css
+++ b/themes/merlinscholz.name-theme/assets/css/style.css
@@ -138,7 +138,7 @@ header{
     font-style: italic;
     display:block;
 }
-.single .title{
+.single .title, .list h1{
     margin-top:0;
 }
 footer{
